fixed logic to correct show page from point of view where current_user is a teacher, booked lessons were not showing up

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -56,3 +56,15 @@
   max-width: 15em;
 }
 
+#content {
+  width: 300px;
+  margin-left: 420px;
+}
+
+#createlessonbutton {
+  margin-right: 80px;
+}
+
+#booked {
+  margin-right: 40px;
+}
